apiproducts/lambda/lambda-apiproduct-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: lambda-apiproduct
  namespace: gloo-system
  labels:
    app: apis
  annotations:
    delegation.gateway.solo.io/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      # filters:
      # - type: ExtensionRef
      #   extensionRef:
      #     group: gateway.solo.io
      #     kind: RouteOption
      #     name: routeoption-apiproducts-cors
      backendRefs:
      # Delegate to another HTTPRoute
      - name: my-aws-lambda-upstream
        namespace: gloo-system
        group: gloo.solo.io
        kind: Upstream
        filters:
        - type: ExtensionRef
          extensionRef:
            group: "gloo.solo.io"
            kind: Parameter
            name: greeting-function-QuarkusLambdaDdoyle-2CIg7Nh54XUQ
            # name: QuarkusLambdaDdoyle
            # name: quarkus-lambda-429-test-QuarkusLambdaTest-Jf88L9aFqkAS
